feat：新增GCRoots和JVM常用参数